styles/style.css
/* GENERAL STYLING */
html {
    font-size: 1rem;
}

body {
    min-height: 100vh;
    font-family: 'Poppins', sans-serif;
    margin: 0 auto;
    padding: 2.5%;
    padding-bottom: 0;
}

h1 {
    font-size: 3.2rem;
}

p:last-child {
    margin-bottom: 0;
}

img {
    display: block;
    margin: 0 auto;
}

a, a:hover {
    color: #FF6299;
}

/* Navigation bar */

nav {
    height: 10vh;
    background-color: #FF6299;
}

.nav-link {
    color: white;
}

.nav-link:hover, .active {
    color: #3d292b;
}

.active {
    font-weight: bold;
    text-decoration: underline;
}

main {
    margin-top: 8vh;
}

/* UTILITIES */
.vertical-center {
    min-height: 80%; 
    min-height: 80vh;
    max-width: 100vw;
    display: flex;
    align-items: center;
}

.fa {
    color: #FF6299;
    margin-left: 0.5rem;
    margin-right: 0.5rem;
}
  
.fa:hover {
    color: #3d292b;
}

/* HOME PAGE STYLING */
.introduction {
    letter-spacing: 1px;
    margin: auto auto;
    text-align: center;
}

.introduction h1 {
    margin-bottom: 15px;
}
  
.introduction p {
    font-size: 1.6rem;
    margin-bottom: 0;
}

#text-typing, #cursor{
    display: inline-block;
}

.blink {
    animation: blink 0.75s infinite;
}
@keyframes blink {
    to { opacity: .0; }
}

/* ABOUT PAGE STYLING*/
.about img {
    padding: 1.5vw;
    padding-bottom: 5%;
    max-height: 85vh;
    max-width: 100%;
}

.about .about-image {
    float: left;
    margin: auto 0;
}

.about .about-container {
    padding: 1vw;
    min-width: 40vw;
}

.about h1 {
    text-align: center;
    margin-top: 1%;
    margin-bottom: 3%;
}

.about p {
    text-align: justify;
}

.contact {
    padding-bottom: 0.8%;
}

